--- a/index.html
+++ b/index.html
@@ -16,43 +16,247 @@
   <section class="tabs">
 
     <div class="container-fluid">
-  
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-  <li class="nav-item" role="presentation">
-    <a class="nav-link active" id="Anamnese-tab" data-toggle="tab" href="#Anamnese" role="tab" aria-controls="Anamnese" aria-selected="true">1.Anamnese</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="Clinico-tab" data-toggle="tab" href="#Clinico" role="tab" aria-controls="Clinico" aria-selected="false">2.Exame Clínico</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="nutri-tab" data-toggle="tab" href="#nutri" role="tab" aria-controls="nutri" aria-selected="false">3.Recomendações Nutricionais Pré-operatórias</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="avaliacao-tab" data-toggle="tab" href="#avaliacao" role="tab" aria-controls="avaliacao" aria-selected="false">4.Avaliação do Sistema Músculo Esquelético</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="psico-tab" data-toggle="tab" href="#psico" role="tab" aria-controls="psico" aria-selected="false">5.Avaliação Psicológica e Comportamental</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="Abrangente-tab" data-toggle="tab" href="#Abrangente" role="tab" aria-controls="Abrangente" aria-selected="false">6.Avaliação Médica Abrangente</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="recomendar-tab" data-toggle="tab" href="#recomendar" role="tab" aria-controls="recomendar" aria-selected="false">7.Recomendações</a>
-  </li>
-</ul>
+		<div class="row">
+			<div class="col-auto">
+				 <ul class="nav flex-column nav-pills" id="myTab" role="tablist">
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link active" id="init-tab" data-toggle="tab" href="#init" role="tab" aria-controls="init" aria-selected="true">Início</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="Anamnese-tab" data-toggle="tab" href="#Anamnese" role="tab" aria-controls="Anamnese" aria-selected="false">1.Anamnese</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="Clinico-tab" data-toggle="tab" href="#Clinico" role="tab" aria-controls="Clinico" aria-selected="false">2.Exame Clínico</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="nutri-tab" data-toggle="tab" href="#nutri" role="tab" aria-controls="nutri" aria-selected="false">3.Recomendações Nutricionais Pré-operatórias</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="avaliacao-tab" data-toggle="tab" href="#avaliacao" role="tab" aria-controls="avaliacao" aria-selected="false">4.Avaliação do Sistema Músculo Esquelético</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="psico-tab" data-toggle="tab" href="#psico" role="tab" aria-controls="psico" aria-selected="false">5.Avaliação Psicológica e Comportamental</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="Abrangente-tab" data-toggle="tab" href="#Abrangente" role="tab" aria-controls="Abrangente" aria-selected="false">6.Avaliação Médica Abrangente</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="especial-tab" data-toggle="tab" href="#especial" role="tab" aria-controls="especial" aria-selected="false">7.Situações especiais</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="recomendar-tab" data-toggle="tab" href="#recomendar" role="tab" aria-controls="recomendar" aria-selected="false">8.Recomendações</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+					<a class="nav-link" id="objetivo-tab" data-toggle="tab" href="#objetivo" role="tab" aria-controls="objetivo" aria-selected="false">9.Avaliação dos objetivos do paciente </a>
+				  </li>
+				</ul>
+			</div>
+			<div class="col">
+
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="Anamnese" role="tabpanel" aria-labelledby="Anamnese-tab">..1..
-	<a href="vertical.html">outro jeito</a>
+  <div class="tab-pane fade show active" id="init" role="tabpanel" aria-labelledby="init-tab">
+	  <ol>
+		  <li>“O paciente pós-bariátrico não é semelhante ao paciente clássico para as cirurgias de contorno corporal”</li>
+		  <li>Preparar o paciente após uma grande perda de peso requer a compreensão de questões fisiológicas relevantes para garantir segurança no procedimento cirúrgico do contorno corporal.</li>
+		  <li>Índice de massa corporal superior a 30kg/m2 aumentaram o risco de complicações pós-operatórias após a cirurgia de contorno corporal: trombose venosa profunda, cicatrização patológica, infecção, hematoma e seroma.</li>
+		  <li>A cirurgia bariátrica tem um impacto significativo no metabolismo ósseo. Todos os procedimentos bariátricos induzem um estado de alta rotatividade óssea.</li>
+		  <li>A cirurgia bariátrica tem atuação na absorção de medicamentos, e esse efeito é droga-específico. As drogas que são intrinsecamente mal absorvidas, altamente lipofílicas e / ou sofrem recirculação enterohepática exibem maior potencial de má absorção.<br>
+			Ciclosporina, Tiroxina, Fenitoína e Rifampicina…</li>
+	</ol>
   </div>
-  <div class="tab-pane fade" id="Clinico" role="tabpanel" aria-labelledby="Clinico-tab">..2..</div>
-  <div class="tab-pane fade" id="nutri" role="tabpanel" aria-labelledby="nutri-tab">..3..</div>
-  <div class="tab-pane fade" id="avaliacao" role="tabpanel" aria-labelledby="avaliacao-tab">..4..</div>
-  <div class="tab-pane fade" id="psico" role="tabpanel" aria-labelledby="psico-tab">..5..</div>
-  <div class="tab-pane fade" id="Abrangente" role="tabpanel" aria-labelledby="Abrangente-tab">..6..</div>
-  <div class="tab-pane fade" id="recomendar" role="tabpanel" aria-labelledby="recomendar-tab">..7..</div>
+  
+  
+  
+  
+  
+	<div class="tab-pane fade" id="Anamnese" role="tabpanel" aria-labelledby="Anamnese-tab">
+	<ol type="a">
+		<li>Nome</li>
+		<li>Sexo (masculino / Feminino)</li>
+		<li>Idade </li>
+		<li>Data da cirurgia bariátrica</li>
+		<li>Tipo de Cirurgia Bariátrica
+			<ul>
+				<li>Sleeve gástrico</li>
+				<li>By-pass gástrico em Y de Roux</li>
+				<li>Banda gástrica ajustável</li>
+				<li>Outra (área para escrever qual tipo por extenso)</li>
+			</ul>
+		</li>	
+		<li>Altura do paciente</li>
+		<li>Peso ANTES da cirurgia bariátrica</li>
+		<li>IMC antes da cirurgia bariátrica (IMC = peso / (altura)2)</li>
+		<li>Peso atual</li>
+		<li>IMC atual (IMC = peso / (altura)2) – melhor indicação aos < 30 kg/m2.</li>
+		<li>Perda TOTAL de peso</li>
+		<li>Período de estabilidade do peso: (em meses, ao menos 6 meses)</li>
+		<li>Comorbidades no pré-operatório
+			<ul>
+				<li>Apneia do sono.</li>
+				<li>Asma e bronquite.</li>
+				<li>Cicatrizes patológicas e cicatrizes por cirurgias prévias.</li>
+				<li>Colecistopatia calculosa.</li>
+				<li>Diabetes melitus. </li>
+				<li>Dislipidemia.</li>
+				<li>Doença autoimune.</li>
+				<li>Doença cardíaca. </li>
+				<li>Doença do refluxo gastroesofágico.</li>
+				<li>Doença renal.</li>
+				<li>Etilismo (doses/dia).</li>
+				<li>Eventos tromboembólicos (imobilidade/terapia hormonal).</li>
+				<li>Hipertensão Arterial Sistêmica.</li>
+				<li>Hipotireoidismo.</li>
+				<li>Neoplasias malignas.</li>
+				<li>Osteoartrite.</li>
+				<li>Tabagismo (presente – maços/dia).</li>
+			</ul>
+		</li>
+		<li>Medicamentos de uso contínuo (área para escrever qual tipo por extenso)
+			<ul>
+				<li>Alopáticos</li>
+				<li>Suplementos</li>
+				<li>Vitaminas</li>
+				<li>Fitoterapia</li>
+			</ul>
+		</li>
+		<li>Índice de Caprini (avaliação para a profilaxia tromboembólica)</li>
+
+	</ol>
+	</div>
+  
+  
+  
+  
+  
+	<div class="tab-pane fade" id="Clinico" role="tabpanel" aria-labelledby="Clinico-tab">
+		<ol type="a">
+			<li>Demarcação das topografias das cicatrizes prévias e suas extensões.</li>
+			<li>Observação para a existência de hérnias, principalmente da parede abdominal.</li>
+			<li>Posicionamento Fotográfico.</li>
+			<li>Redundância e qualidade da pele.</li>
+			<li>Lipodistrofia e dobras aderentes</li>
+			<li>Varizes e linfedema.</li>
+		</ol>
+	</div>
+  
+  
+  
+  
+  
+	<div class="tab-pane fade" id="nutri" role="tabpanel" aria-labelledby="nutri-tab">
+		<ol type="a">
+			<li>//TODO:</li>
+		</ol>
+	</div>
+  
+  
+  
+  
+  
+  
+	<div class="tab-pane fade" id="avaliacao" role="tabpanel" aria-labelledby="avaliacao-tab">
+		<ol type="a">
+			<li>Perda óssea e risco de fratura
+				<ul>
+					<li>Estratégias pré-operatórias
+						<ul>
+							<li>Checar os níveis séricos da vitamina D.</li>
+							<li>Absorciometria bifotónica de raio X (Densitometria de dupla energia).</li>
+							<li>Atividade física regular, particularmente exercício de sustentação de peso e carga muscular.</li>
+							<li>Maior ingestão de proteínas.</li>
+							<li>Bisfosfonatos e denosumabe só devem ser considerados após terapia apropriada para insuficiência de cálcio e vitamina D e confirmação de que o status adequado de cálcio e vitamina D é mantido (risco potencial de ulceração anastomótica).</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+		</ol>  
+	</div>
+  
+  
+  
+  
+  
+	<div class="tab-pane fade" id="psico" role="tabpanel" aria-labelledby="psico-tab">
+		<ol type="a">
+			<li>Estabeleça um bom relacionamento desde a primeira consulta.</li>
+			<li>Peça aos pacientes para descreverem suas preocupações e delinearem claramente as metas e prioridades com suas próprias palavras.</li>
+			<li>Enfatizar a troca de excedente de pele e flacidez por cicatrizes.</li>
+			<li>Avalie as expectativas razoáveis do paciente.</li>
+			<li>Avaliar redes de apoio físico e emocional (familiar, por exemplo).</li>
+			<li>Pacientes com distúrbio dismórfico corporal conhecido ou suspeito, transtorno bipolar ou esquizofrenia devem ser submetidos a uma avaliação de saúde mental.</li>
+			<li>Questionários:</li>
+		</ol>  
+	
+	</div>
+  
+  
+  
+  
+  
+	<div class="tab-pane fade" id="Abrangente" role="tabpanel" aria-labelledby="Abrangente-tab">
+		<ol type="a">
+			<li>Avaliação Respiratória e para a Apneia obstrutiva do sono.</li>
+			<li>Avaliação Cardiovascular.</li>
+		</ol>
+	</div>
+  
+  
+  
+  
+  
+	<div class="tab-pane fade" id="especial" role="tabpanel" aria-labelledby="especial-tab">
+  		<ol type="a">
+			<li>Cirurgias funcionais (higiênicas) para pacientes com deficiências físicas associadas, podem ser realizadas com IMC > 30 kg/m2.</li>
+		</ol>
+	</div>
+  
+  
+  
+  
+  
+  	<div class="tab-pane fade" id="recomendar" role="tabpanel" aria-labelledby="recomendar-tab">
+  		<ol type="a">
+			<li>Termo de Consentimento Livre e Esclarecido</li>
+			<li>Anti-inflamatórios não esteróides (AINEs) devem ser evitados após a cirurgia bariátrica devido ao risco de desenvolvimento de úlcera gástrica e marginal na anastomose.</li>
+			<li>Mínimo de Hemoglobina de 12% no pré-operatório</li>
+			<li>Profilaxia tromboembólica: meias compressivas antes e após a cirurgia.
+			<ul><li>Avaliar necessidade de anticoagulação (Índice de Caprini)</li></ul></li>
+			<li>Compressão pneumática intermitentes dos membros inferiores durante o procedimento operatório</li>
+			<li>Colchão de ar na mesa operatória</li>
+			<li>Sondagem vesical intermitente e monitorização do débito urinário</li>
+			<li>Mobilização precoce no pós-operatório</li>
+			<li>Anticoagulação </li>
+			<li>Parar o tabagismo</li>
+			<li>Corticosteroide profilático (com bloqueador do receptor H2) </li>
+			<li>Antibioticoterapia</li>
+			<li>Cabeça e membros inferiores elevados após a cirurgia</li>
+			<li>Reduzir o tempo cirúrgico com equipe adequada</li>
+		</ol>
+	</div>
+  
+  
+  
+  
+  
+  
+  	<div class="tab-pane fade" id="objetivo" role="tabpanel" aria-labelledby="objetivo-tab">
+  		<ol type="a">
+			<li>
+			Após a avaliação completa, o cirurgião deve ter um diálogo informando o planejamento cirúrgico. É importante equilibrar o que pode ser realizado com segurança em conciliação aos objetivos do paciente, e comunicar para que o paciente entenda e aprecie a lógica.
+			</li>
+		</ol>
+	</div>
+ 
+  
 </div>
 
+
+			</div>
+		</div>
     </div>
+
+
+
   </section>
 	
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
